#618 - fixed header on ios safari is resolved - Rohan / Navaneeth

--- a/ui/app/styles/common/_bahmniGlobal.scss
+++ b/ui/app/styles/common/_bahmniGlobal.scss
@@ -14,6 +14,19 @@ body{
     background:#fff;
 }
 
+.fix-fixed {
+    .opd-wrapper {
+        padding-top: 0;
+    }
+    .opd-header-wrapper {
+        position: relative;
+        -webkit-backface-visibility: hidden;
+    }
+    .template-control-header {
+        position: absolute;
+    }
+}
+
 a, a:link, a:visited, a:hover, a:active {
     color: $bahmniLinkColor;
     text-decoration: none;
